src/test/deca/context/valid/class/equals/use.deca
// Description:
//    Utilisation de la methode equals
//
// Resultats:
//    Aucune erreur

class A {}
class C {
	boolean equals(C c) {
		return true;
	}
}

{
	A a;
	A b;
	C c;

	if(a.equals(b)) {}
	if(a.equals(a)) {}
	if(a.equals(new Object())) {}
	if(a.equals(c)) {}
	if(c.equals(c)) {}
	if(c.equals(a)) {}
	if(c.equals(new Object())) {}
}
