src/test/deca/context/invalid/class/instance/bool.deca
// Description:
//    Utilisation de instanceof sur un bool
//
// Resultats:
//    cannot cast bool to bool

{
	int a;
	if(a instanceof bool) {}
}

